--- a/Javascript/Javascript.html
+++ b/Javascript/Javascript.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>combbiinaaattiiooonn</title>
+    <title>Javascript</title>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.11.3/lib/p5.min.js"></script>
 <script src="sketch.js"></script>
     
@@ -16,4 +16,5 @@
     </main>
     <!-- <script src="sketch.js"></script> -->
   </body>
+
 </html>
